add new website from server na

--- a/xem-phim-bo/lieu-diep-trich-tinh-than/index.html
+++ b/xem-phim-bo/lieu-diep-trich-tinh-than/index.html
@@ -1193,7 +1193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1606,28 +1606,6 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/天使のはらわた-赤い教室-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Angel Guts: Red Classroom
-            </span>
-            <span class="list-top-movie-item-en">
-             Angel Guts: Red Classroom
-            </span>
-            <span class="list-top-movie-item-view">
-             51 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
           <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
            <span class="status">
             FHD Vietsub
@@ -1640,6 +1618,28 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             </span>
             <span class="list-top-movie-item-en">
              The Blood of Youth
+            </span>
+            <span class="list-top-movie-item-view">
+             51 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/天使のはらわた-赤い教室-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-en">
+             Angel Guts: Red Classroom
             </span>
             <span class="list-top-movie-item-view">
              51 lượt xem
@@ -1663,21 +1663,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cai-gia-cua-cong-ly" title="Cái Giá Của Công Lý">
+          <a class="list-top-movie-link" href="/phim-moi/lan-ket-hon-dau-tien" title="Lần Kết Hôn Đầu Tiên">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cai-gia-cua-cong-ly-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lan-ket-hon-dau-tien-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cái Giá Của Công Lý
+             Lần Kết Hôn Đầu Tiên
             </span>
             <span class="list-top-movie-item-en">
-             The Constant Gardener
+             FIRST MARRIAGE
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             8 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1685,21 +1685,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dac-vu-canh-bien" title="Đặc vụ cảnh biên">
+          <a class="list-top-movie-link" href="/phim-moi/song-tinh" title="Song Tính">
            <span class="status">
-            Vietsub - HD Vietsub
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dac-vu-canh-bien-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/song-tinh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đặc vụ cảnh biên
+             Song Tính
             </span>
             <span class="list-top-movie-item-en">
-             The Shepherd
+             바이섹슈얼
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             6 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1707,21 +1707,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuong-doat" title="Cưỡng Đoạt">
+          <a class="list-top-movie-link" href="/phim-moi/trai-tu-amazon" title="Trại Tù Amazon">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuong-doat-taken-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/trai-tu-amazon-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cưỡng Đoạt
+             Trại Tù Amazon
             </span>
             <span class="list-top-movie-item-en">
-             Taken
+             Amazon Jail
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1729,21 +1729,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhiet-huyet-vo-dao" title="Nhiệt Huyết Võ Đạo">
+          <a class="list-top-movie-link" href="/phim-moi/luoi-cua-iii" title="Lưỡi cưa III">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhiet-huyet-vo-dao-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/luoi-cua-iii-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nhiệt Huyết Võ Đạo
+             Lưỡi cưa III
             </span>
             <span class="list-top-movie-item-en">
-             Re Xue Wu Dao
+             Saw III
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             5 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1751,21 +1751,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/black-lagoon-phan-1" title="Black Lagoon (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/nhuong-tu-dan-phi" title="Nhượng Tử Đạn Phi">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/black-lagoon-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhuong-tu-dan-phi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Black Lagoon (Phần 1)
+             Nhượng Tử Đạn Phi
             </span>
             <span class="list-top-movie-item-en">
-             Black Lagoon (Season 1)
+             Let the Bullets Fly
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             5 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
