add new website from server na

--- a/xem-phim-bo/thu-bac/index.html
+++ b/xem-phim-bo/thu-bac/index.html
@@ -1183,7 +1183,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1687,7 +1687,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Angel Guts: Red Classroom
             </span>
             <span class="list-top-movie-item-view">
-             49 lượt xem
+             51 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1708,40 +1708,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tay-thi-tinh-su" title="Tây Thi Tình Sử">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tay-thi-tinh-su-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Tây Thi Tình Sử
-            </span>
-            <span class="list-top-movie-item-en">
-             Hero
-            </span>
-            <span class="list-top-movie-item-view">
-             0 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cong-chua-the-vai-3-chuyen-tinh-ngoi-sao" title="Công chúa thế vai 3: Chuyện tình ngôi sao">
+          <a class="list-top-movie-link" href="/phim-moi/dem-tan-sat" title="Đêm Tàn Sát">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cong-chua-the-vai-3-chuyen-tinh-ngoi-sao-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dem-tan-sat-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Công chúa thế vai 3: Chuyện tình ngôi sao
+             Đêm Tàn Sát
             </span>
             <span class="list-top-movie-item-en">
-             The Princess Switch 3: Romancing the Star
+             Dylan Dog: Dead of Night
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1752,21 +1730,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dut-diem" title="Dứt Điểm">
+          <a class="list-top-movie-link" href="/phim-moi/mat-tich-o-berlin" title="Mất Tích Ở Berlin">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dut-diem-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mat-tich-o-berlin-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Dứt Điểm
+             Mất Tích Ở Berlin
             </span>
             <span class="list-top-movie-item-en">
-             Taken 3
+             Berlin Syndrome
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             6 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1774,21 +1752,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bach-nien-hao-hop" title="Bách niên hảo hợp">
+          <a class="list-top-movie-link" href="/phim-moi/moi-chi-dinh-nhan-vat-yeu-duong" title="Mời Chỉ Định Nhân Vật Yêu Đương">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bach-nien-hao-hop-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/moi-chi-dinh-nhan-vat-yeu-duong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bách niên hảo hợp
+             Mời Chỉ Định Nhân Vật Yêu Đương
             </span>
             <span class="list-top-movie-item-en">
-             Love for All Seasons
+             Designated Love
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1796,21 +1774,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/co-tich-noi-dai-duong" title="Cổ Tích Nơi Đại Dương">
+          <a class="list-top-movie-link" href="/phim-moi/ma-ca-rong-xinh-dep" title="Ma Cà Rồng Xinh Đẹp">
            <span class="status">
-            HD Vietsub
+            HD 720p Vietsub + Thuyết minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-tich-noi-dai-duong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ma-ca-rong-xinh-dep-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cổ Tích Nơi Đại Dương
+             Ma Cà Rồng Xinh Đẹp
             </span>
             <span class="list-top-movie-item-en">
-             The Little Mermaid
+             Beautiful Vampire
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/armageddon-time" title="Armageddon Time">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/armageddon-time-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Armageddon Time
+            </span>
+            <span class="list-top-movie-item-en">
+             Armageddon Time
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
